--- a/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,11 @@
-<p>pokemon-list works!</p>
+
+<table>
+    <thead>
+      <th>Index</th>
+      <th>Name</th>
+      <th>Type</th>
+    </thead>
+    <tbody>
+        <app-pokemon-detail *ngFor="let pokemon of pokemons" [detail]="pokemon"></app-pokemon-detail>
+    </tbody>
+  </table>
