remove list/detail

--- a/src/app/pokemon-base/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokemon-base/pokemon-detail/pokemon-detail.component.html
@@ -3,4 +3,5 @@
     [class.cool-bool]="detail.isCool">
     {{detail.id}}:{{detail.name}} {{detail.isCool == true ? 'is cool' : 'is not cool'}}
     </td>
+    <button (click)="onRemove()">Remove Pokemon</button>
 </tr>
