--- a/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
@@ -3,9 +3,11 @@
     <thead>
       <th>Index</th>
       <th>Name</th>
-      <th>Type</th>
     </thead>
     <tbody>
-        <app-pokemon-detail *ngFor="let pokemon of pokemons" [detail]="pokemon"></app-pokemon-detail>
+        <app-pokemon-detail 
+        *ngFor="let pokemon of pokemons" 
+        [detail]="pokemon"
+        (remove)="handleRemove($event)"></app-pokemon-detail>
     </tbody>
   </table>
