--- a/src/app/pokemon-template-form/pokemon-template-form.component.html
+++ b/src/app/pokemon-template-form/pokemon-template-form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm">
+<form #form="ngForm" (ngSubmit)="handleSubmit(form)">
     Pokemon Name:
     <input type="text" [(ngModel)]="pokemon.name" name="name"/>
     <label>
@@ -31,6 +31,7 @@
             </option>
         </select>
     </label>
+    <button type="submit" [disabled]="!form.valid">Save</button>
 </form>
 <div>
 MODEL : {{pokemon | json}}
