--- a/src/app/pokemon-base/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokemon-base/pokemon-detail/pokemon-detail.component.html
@@ -3,5 +3,6 @@
     [class.cool-bool]="detail.isCool">
     {{detail.id}}:{{detail.name}} {{detail.isCool == true ? 'is cool' : 'is not cool'}}
     </td>
+    <button [routerLink]="['/pokemon', detail.id]">Details</button>
     <button (click)="onRemove()">Remove Pokemon</button>
 </tr>
