--- a/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
@@ -8,6 +8,6 @@
         <app-pokemon-detail 
         *ngFor="let pokemon of pokemons" 
         [detail]="pokemon"
-        (remove)="handleRemove($event)"></app-pokemon-detail>
+        (remove)="handleRemove($event)"><h1>------------</h1></app-pokemon-detail>
     </tbody>
   </table>
