--- a/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
@@ -1,13 +1,13 @@
-
 <table>
     <thead>
+      <th #pokemonTh>Name</th>
       <th>Index</th>
-      <th>Name</th>
     </thead>
     <tbody>
         <app-pokemon-detail 
+        #pokemonRef
         *ngFor="let pokemon of pokemons" 
         [detail]="pokemon"
-        (remove)="handleRemove($event)"><h1>------------</h1></app-pokemon-detail>
+        (remove)="handleRemove($event)"><h1>{{pokemon.name}}</h1></app-pokemon-detail>
     </tbody>
   </table>
